--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.23.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "md5": "^2.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
